# eigen-guess

./: .gitignore  pyproject.toml  svd_cifar1043.py  svd_mnist92.py
old/: svd_cifar1052.py  svd_cifar1055.py  svd_cifar1093.py
src/eigen_guess/: __init__.py  low_rank.py  low_rank_org.py  main.py  main_old.py  yolos.py
tests/: test_low_rank.py
