[tool.poetry]
name = "eigen-guess"
version = "0.1.0"
description = ""
authors = ["Salsa Steve <elmanstevelaguna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
pytorch = "^1.0.2"
torchvision = "^0.19.0"
timm = "^1.0.9"
opencv-python = "^4.10.0.84"
termcolor = "^2.4.0"
yacs = "^0.1.8"
PyYAML = "^6.0.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
