[tool.poetry]
name = "eigen-guess"
version = "0.1.0"
description = ""
authors = ["Salsa Steve <elmanstevelaguna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.0"
torchvision = "^0.19.0"
timm = "^1.0.9"
opencv-python = "^4.10.0.84"
termcolor = "^2.4.0"
yacs = "^0.1.8"
PyYAML = "^6.0.2"
scipy = "^1.14.1"
torchaudio = "^2.4.0"
numpy = "1.26.4"
transformers = "^4.44.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
pytest = "^8.3.2"

[tool.poetry.scripts]
eigen-guess = "eigen_guess.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

extend-exclude = [
    "old",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]

    

[tool.ruff.lint.pydocstyle]
convention = "google"